CLC-2732 We need to disable JIT on ets-dev due to a bug in JRuby 1.7.4 + Java 1.7